PlacemarkLayout: fine-tune the performance of treemodel signals

BUG: 305195